Bug 583143 - Fix bustage with MOZ_TRACEVIS and other NPOTB code (r=lw)